# Email-Assistant

./: .env.example  .gitignore  README.md  langgraph.json  pyproject.toml
src/agent/: __init__.py  configuration.py  google_auth.py  graph.py  prompts.py  state.py  utils.py
